# Snakeletix

./: .gitignore  CMakeLists.txt  readme.md
src/: main.c  main.h  text.c  text.h  utils.c  utils.h
src/game/: field.c  field.h  snake.c  snake.h
src/game/items/: apple.c  apple.h  bombs.c  bombs.h  paint.c  paint.h  portals.c  portals.h  quicksands.c  quicksands.h
src/menu/: menu.c  menu.h
